# qwarp

./: .SRCINFO  .gitignore  CHANGELOG.md  MANIFEST.in  PKGBUILD  README.md  build_bin.sh  pyproject.toml  qwarp.desktop  qwarp.install  test.ts
.github/workflows/: ci.yml  release.yml
scripts/: build_locales.sh  format.sh  update_warp.sh
src/: test_translation.py
src/qwarp/: __init__.py  engine.py  main.py  state.py  tray.py  ui.py  utils.py
src/qwarp/assets/locales/: qwarp_de.ts  qwarp_en.ts  qwarp_es.ts  qwarp_hi.ts  qwarp_it.ts  qwarp_ja.ts  qwarp_pt.ts  qwarp_zh.ts
src/qwarp/core/: __init__.py  engine.py  instance.py  state.py
src/qwarp/ui/: __init__.py  styles.py  toggle.py  tray.py  window.py
src/qwarp/utils/: __init__.py  system.py
tests/: test_smoke.py
